--- a/email-sender/wrangler.toml
+++ b/email-sender/wrangler.toml
@@ -11,7 +11,7 @@ send_email = [
 [[d1_databases]]
 binding = "DB" # i.e. available in your Worker on env.DB
 database_name = "maildb_d1"
-database_id = "YOUR_DATABASE_ID"
+database_id = "be8606b4-37d8-48a1-be4a-d3fdec1bafbd"
 
 [vars]
 SCRIPT_NAME = "email-sender"
